<resources>
    <string name="app_name">Test_app</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="dark_mode">Dark Mode</string>
    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <!-- O -->
    <string name="Add">Add</string>
    <string name="Cancel">Cancel</string>
    <string name="Manage_Activities">Manage Activities</string>

<!--    Default values-->
    <string name="zero_percent">0%</string>

    <!-- Customize layout-->
    <string name="Card">Card</string>
    <string name="CardBackground">Card Background Color</string>
    <string name="CardAccentColor">Card Accent Color</string>
    <string name="CardTextColor">Card text Color</string>
    <string name="Daily">Daily</string>
    <string name="ProgressBarColor">Progress Bar Color</string>
    <string name="TextColor">Text color</string>
    <string name="InputType">Input type</string>
    <string name="BackgroundPgBarWidth">Background Progress bar width</string>
    <string name="PgbarWidth">Progress Bar Width</string>
    <string name="Weekly">Weekly</string>
    <string name="PiechartColor">Piechart Color list </string>
    <string name="Monthly">Monthly</string>
    <string name="LineColor">Line Color</string>
    <string name="Day">Day</string>
    <string name="Week">Week</string>
    <string name="Month">Month</string>
    <string name="RestoreDefault">Restore Default</string>
    <string name="Selectcolor1">Select Color 1</string>
    <string name="Selectcolor2">Select Color 2</string>
    <string name="Selectcolor3">Select Color 3</string>
    <string name="Selectcolor4">Select Color 4</string>
    <string name="Selectcolor5">Select Color 5</string>

</resources>