<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:longClickable="true"
            app:cardPreventCornerOverlap="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv123123"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:text="@string/Card"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/cardAccentButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/CardAccentColor"
                    android:textColor="?android:attr/textColorPrimary"
                    app:backgroundTint="@android:color/transparent" />

                <Button
                    android:id="@+id/CardBackgroundButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/CardBackground"
                    android:textColor="?android:attr/textColorPrimary"
                    app:backgroundTint="@android:color/transparent" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal">

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:text="@string/Day"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/InputTypeButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/InputType"
                    android:textColor="?android:attr/textColorPrimary"
                    app:backgroundTint="@android:color/transparent" />

                <Button
                    android:id="@+id/progressBarWidthButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/PgbarWidth"
                    android:textColor="?android:attr/textColorPrimary"
                    app:backgroundTint="@android:color/transparent"
                    app:elevation="0dp" />

                <Button
                    android:id="@+id/bgProgressBarButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/BackgroundPgBarWidth"
                    android:textColor="?android:attr/textColorPrimary"
                    app:backgroundTint="@android:color/transparent" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal">

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:text="@string/Week"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/PieChartColorButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/PiechartColor"
                    android:textColor="?android:attr/textColorPrimary"
                    app:backgroundTint="@android:color/transparent" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal"></LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/LineColorButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|center_vertical"
                    android:text="@string/RestoreDefault"
                    android:textColor="?android:attr/textColorPrimary"
                    app:backgroundTint="@android:color/transparent" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>